# object-physics

./: CMakeLists.txt  README.md  geometryobject.cpp  geometryobject.h  objectphysics_unittest.cpp  physics.cpp  physics.h  vector3d.cpp  vector3d.h  vector_unittest.cpp
